testing that the git connected

--- a/phoenix-BII.ipynb
+++ b/phoenix-BII.ipynb
@@ -6,7 +6,9 @@
    "id": "9ac16a89-7fe2-4ab1-8b33-a4dc4f7f39bc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## making a change "
+   ]
   }
  ],
  "metadata": {
