working on structure for the notebook

--- a/phoenix-BII.ipynb
+++ b/phoenix-BII.ipynb
@@ -1,13 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ac16a89-7fe2-4ab1-8b33-a4dc4f7f39bc",
+   "cell_type": "markdown",
+   "id": "b6ae3fa1-767a-40ae-81af-c71f3f58f22b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "## making a change "
+    "### Analyzi"
    ]
   }
  ],
