--- a/phoenix-BII.ipynb
+++ b/phoenix-BII.ipynb
@@ -199,7 +199,7 @@
        "                <h3 style=\"margin-bottom: 0px; display: inline;\">Asset:  Biodiversity Intactness </h3>\n",
        "            </summary>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
-       "                <tr><td style=\"text-align: left;\"><strong>href:</strong> https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2020/bii_2020_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T03%3A14%3A57Z&se=2023-12-21T03%3A14%3A57Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T03%3A14%3A56Z&ske=2023-12-21T03%3A14%3A56Z&sks=b&skv=2021-06-08&sig=Uk8HvBAUebID2sNHU%2BdIF2fC1SfYH/XL/Bnov%2Bz6x6U%3D </td></tr>\n",
+       "                <tr><td style=\"text-align: left;\"><strong>href:</strong> https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2020/bii_2020_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T04%3A05%3A31Z&se=2023-12-21T04%3A05%3A31Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T04%3A05%3A30Z&ske=2023-12-21T04%3A05%3A30Z&sks=b&skv=2021-06-08&sig=NaYRqEH9RzSIN1T8BHsnxlkCnD1zfcISioGLxmDfL8k%3D </td></tr>\n",
        "                \n",
        "                    <tr><td style=\"text-align: left;\"><strong>type:</strong> image/tiff; application=geotiff; profile=cloud-optimized </td></tr>\n",
        "                \n",
@@ -536,7 +536,7 @@
        "                <h3 style=\"margin-bottom: 0px; display: inline;\">Asset:  Biodiversity Intactness </h3>\n",
        "            </summary>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
-       "                <tr><td style=\"text-align: left;\"><strong>href:</strong> https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2019/bii_2019_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T03%3A14%3A57Z&se=2023-12-21T03%3A14%3A57Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T03%3A14%3A56Z&ske=2023-12-21T03%3A14%3A56Z&sks=b&skv=2021-06-08&sig=Uk8HvBAUebID2sNHU%2BdIF2fC1SfYH/XL/Bnov%2Bz6x6U%3D </td></tr>\n",
+       "                <tr><td style=\"text-align: left;\"><strong>href:</strong> https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2019/bii_2019_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T04%3A05%3A31Z&se=2023-12-21T04%3A05%3A31Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T04%3A05%3A30Z&ske=2023-12-21T04%3A05%3A30Z&sks=b&skv=2021-06-08&sig=NaYRqEH9RzSIN1T8BHsnxlkCnD1zfcISioGLxmDfL8k%3D </td></tr>\n",
        "                \n",
        "                    <tr><td style=\"text-align: left;\"><strong>type:</strong> image/tiff; application=geotiff; profile=cloud-optimized </td></tr>\n",
        "                \n",
@@ -873,7 +873,7 @@
        "                <h3 style=\"margin-bottom: 0px; display: inline;\">Asset:  Biodiversity Intactness </h3>\n",
        "            </summary>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
-       "                <tr><td style=\"text-align: left;\"><strong>href:</strong> https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2018/bii_2018_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T03%3A14%3A57Z&se=2023-12-21T03%3A14%3A57Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T03%3A14%3A56Z&ske=2023-12-21T03%3A14%3A56Z&sks=b&skv=2021-06-08&sig=Uk8HvBAUebID2sNHU%2BdIF2fC1SfYH/XL/Bnov%2Bz6x6U%3D </td></tr>\n",
+       "                <tr><td style=\"text-align: left;\"><strong>href:</strong> https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2018/bii_2018_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T04%3A05%3A31Z&se=2023-12-21T04%3A05%3A31Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T04%3A05%3A30Z&ske=2023-12-21T04%3A05%3A30Z&sks=b&skv=2021-06-08&sig=NaYRqEH9RzSIN1T8BHsnxlkCnD1zfcISioGLxmDfL8k%3D </td></tr>\n",
        "                \n",
        "                    <tr><td style=\"text-align: left;\"><strong>type:</strong> image/tiff; application=geotiff; profile=cloud-optimized </td></tr>\n",
        "                \n",
@@ -1210,7 +1210,7 @@
        "                <h3 style=\"margin-bottom: 0px; display: inline;\">Asset:  Biodiversity Intactness </h3>\n",
        "            </summary>\n",
        "            <table style=\"width: 100%; text-align: left;\">\n",
-       "                <tr><td style=\"text-align: left;\"><strong>href:</strong> https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2017/bii_2017_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T03%3A14%3A57Z&se=2023-12-21T03%3A14%3A57Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T03%3A14%3A56Z&ske=2023-12-21T03%3A14%3A56Z&sks=b&skv=2021-06-08&sig=Uk8HvBAUebID2sNHU%2BdIF2fC1SfYH/XL/Bnov%2Bz6x6U%3D </td></tr>\n",
+       "                <tr><td style=\"text-align: left;\"><strong>href:</strong> https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2017/bii_2017_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T04%3A05%3A31Z&se=2023-12-21T04%3A05%3A31Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T04%3A05%3A30Z&ske=2023-12-21T04%3A05%3A30Z&sks=b&skv=2021-06-08&sig=NaYRqEH9RzSIN1T8BHsnxlkCnD1zfcISioGLxmDfL8k%3D </td></tr>\n",
        "                \n",
        "                    <tr><td style=\"text-align: left;\"><strong>type:</strong> image/tiff; application=geotiff; profile=cloud-optimized </td></tr>\n",
        "                \n",
@@ -1477,7 +1477,7 @@
        "</div>"
       ],
       "text/plain": [
-       "<pystac.item_collection.ItemCollection at 0x7353bc7cf990>"
+       "<pystac.item_collection.ItemCollection at 0x7090b9563190>"
       ]
      },
      "execution_count": 2,
@@ -1551,7 +1551,7 @@
     {
      "data": {
       "text/plain": [
-       "{'data': <Asset href=https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2020/bii_2020_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T03%3A14%3A57Z&se=2023-12-21T03%3A14%3A57Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T03%3A14%3A56Z&ske=2023-12-21T03%3A14%3A56Z&sks=b&skv=2021-06-08&sig=Uk8HvBAUebID2sNHU%2BdIF2fC1SfYH/XL/Bnov%2Bz6x6U%3D>,\n",
+       "{'data': <Asset href=https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2020/bii_2020_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T04%3A05%3A31Z&se=2023-12-21T04%3A05%3A31Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T04%3A05%3A30Z&ske=2023-12-21T04%3A05%3A30Z&sks=b&skv=2021-06-08&sig=NaYRqEH9RzSIN1T8BHsnxlkCnD1zfcISioGLxmDfL8k%3D>,\n",
        " 'tilejson': <Asset href=https://planetarycomputer.microsoft.com/api/data/v1/item/tilejson.json?collection=io-biodiversity&item=bii_2020_34.74464974521749_-115.38597824385106_cog&assets=data&tile_format=png&colormap_name=io-bii&rescale=0%2C1&expression=0.97%2A%28data_b1%2A%2A3.84%29&format=png>,\n",
        " 'rendered_preview': <Asset href=https://planetarycomputer.microsoft.com/api/data/v1/item/preview.png?collection=io-biodiversity&item=bii_2020_34.74464974521749_-115.38597824385106_cog&assets=data&tile_format=png&colormap_name=io-bii&rescale=0%2C1&expression=0.97%2A%28data_b1%2A%2A3.84%29&format=png>}"
       ]
@@ -1585,7 +1585,7 @@
     {
      "data": {
       "text/plain": [
-       "{'data': <Asset href=https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2017/bii_2017_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T03%3A14%3A57Z&se=2023-12-21T03%3A14%3A57Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T03%3A14%3A56Z&ske=2023-12-21T03%3A14%3A56Z&sks=b&skv=2021-06-08&sig=Uk8HvBAUebID2sNHU%2BdIF2fC1SfYH/XL/Bnov%2Bz6x6U%3D>,\n",
+       "{'data': <Asset href=https://pcdata01euw.blob.core.windows.net/impact/bii-v1/bii_2017/bii_2017_34.74464974521749_-115.38597824385106_cog.tif?st=2023-12-13T04%3A05%3A31Z&se=2023-12-21T04%3A05%3A31Z&sp=rl&sv=2021-06-08&sr=c&skoid=c85c15d6-d1ae-42d4-af60-e2ca0f81359b&sktid=72f988bf-86f1-41af-91ab-2d7cd011db47&skt=2023-12-14T04%3A05%3A30Z&ske=2023-12-21T04%3A05%3A30Z&sks=b&skv=2021-06-08&sig=NaYRqEH9RzSIN1T8BHsnxlkCnD1zfcISioGLxmDfL8k%3D>,\n",
        " 'tilejson': <Asset href=https://planetarycomputer.microsoft.com/api/data/v1/item/tilejson.json?collection=io-biodiversity&item=bii_2017_34.74464974521749_-115.38597824385106_cog&assets=data&tile_format=png&colormap_name=io-bii&rescale=0%2C1&expression=0.97%2A%28data_b1%2A%2A3.84%29&format=png>,\n",
        " 'rendered_preview': <Asset href=https://planetarycomputer.microsoft.com/api/data/v1/item/preview.png?collection=io-biodiversity&item=bii_2017_34.74464974521749_-115.38597824385106_cog&assets=data&tile_format=png&colormap_name=io-bii&rescale=0%2C1&expression=0.97%2A%28data_b1%2A%2A3.84%29&format=png>}"
       ]
@@ -1638,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "551690e3-8eb1-4631-ab1e-76eb1b1b8400",
    "metadata": {
     "tags": []
@@ -1679,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6d61b6ea-8f33-47b3-af33-fbb7222321e2",
    "metadata": {
     "tags": []
@@ -1709,7 +1709,10 @@
     "ax.set_title(\"Phoenix Subdivision, Arizona\")\n",
     "\n",
     "# turn axis ticks off\n",
-    "ax.set_axis_off()"
+    "ax.set_axis_off()\n",
+    "\n",
+    "# save the image\n",
+    "plt.savefig('images/phoenix_context.png', bbox_inches='tight', dpi=300)"
    ]
   },
   {
@@ -1724,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "86bda01b-be37-4aa8-9823-1c9d6ce1cee3",
    "metadata": {
     "tags": []
@@ -1778,7 +1781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "0695a1e2-42b4-4baf-8c70-c66dd270b9e3",
    "metadata": {
     "tags": []
@@ -1786,31 +1789,11 @@
    "outputs": [],
    "source": [
     "# subtract the 2020 raster from the 2017 raster\n",
-    "bii_loss = bii_2017_int - bii_2020_int"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "afd3b24c-6afb-465b-9f51-28613772379f",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "bii_loss = bii_2017_int - bii_2020_int\n",
+    "\n",
     "# reclassify all areas of -1 (gained biodiversity) to 0\n",
-    "bii_loss = bii_loss.where(bii_loss != -1, other = 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "33b68deb-4dd2-4428-8a29-a881ed16cdd4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "bii_loss = bii_loss.where(bii_loss != -1, other = 0)\n",
+    "\n",
     "# reclassify 0s to nan \n",
     "bii_loss = bii_loss.where(bii_loss !=0, other = np.nan)"
    ]
@@ -1827,7 +1810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "d68705b7-c1bf-4def-bcf6-66030fa08b26",
    "metadata": {
     "tags": []
